tests/snapshots/snapshots__pipeline@forall_multi.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/forall_multi.pr
---
== tokens ==
VOpen Fn Ident("pick") LParen Ident("g") Colon Forall Ident("a") Ident("b") Dot LParen Ident("a") Comma Ident("b") RParen Arrow Ident("a") RParen Colon KwInt Eq Ident("g") LParen Ident("g") LParen Int(IntLit { value: 1, suffix: None }) Comma True RParen Comma StringLit("x") RParen VSemi Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen LParen Lambda LParen Ident("x") Comma Ident("y") RParen Arrow Ident("x") Colon Forall Ident("a") Ident("b") Dot LParen Ident("a") Comma Ident("b") RParen Arrow Ident("a") RParen LParen Ident("pick") LParen Lambda LParen Ident("x") Comma Ident("y") RParen Arrow Ident("x") RParen Comma Int(IntLit { value: 2, suffix: None }) RParen RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "pick",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Forall(
                            [
                                "a",
                                "b",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                    Var(
                                        "b",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "g",
                        ),
                        span: 45..46,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "g",
                                    ),
                                    span: 47..48,
                                },
                                [
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 49..50,
                                    },
                                    Spanned {
                                        node: Bool(
                                            true,
                                        ),
                                        span: 52..56,
                                    },
                                ],
                            ),
                            span: 47..57,
                        },
                        Spanned {
                            node: Str(
                                "x",
                            ),
                            span: 59..62,
                        },
                    ],
                ),
                span: 45..63,
            },
            wheres: [],
            span: 0..63,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 79..86,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Ann(
                                        Spanned {
                                            node: Lam(
                                                [
                                                    Param {
                                                        name: "x",
                                                        ty: None,
                                                        borrow: false,
                                                        default: None,
                                                    },
                                                    Param {
                                                        name: "y",
                                                        ty: None,
                                                        borrow: false,
                                                        default: None,
                                                    },
                                                ],
                                                Spanned {
                                                    node: Var(
                                                        "x",
                                                    ),
                                                    span: 99..100,
                                                },
                                            ),
                                            span: 88..100,
                                        },
                                        Forall(
                                            [
                                                "a",
                                                "b",
                                            ],
                                            Fun(
                                                [
                                                    Var(
                                                        "a",
                                                    ),
                                                    Var(
                                                        "b",
                                                    ),
                                                ],
                                                Empty,
                                                Var(
                                                    "a",
                                                ),
                                            ),
                                        ),
                                    ),
                                    span: 87..127,
                                },
                                [
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "pick",
                                                ),
                                                span: 128..132,
                                            },
                                            [
                                                Spanned {
                                                    node: Lam(
                                                        [
                                                            Param {
                                                                name: "x",
                                                                ty: None,
                                                                borrow: false,
                                                                default: None,
                                                            },
                                                            Param {
                                                                name: "y",
                                                                ty: None,
                                                                borrow: false,
                                                                default: None,
                                                            },
                                                        ],
                                                        Spanned {
                                                            node: Var(
                                                                "x",
                                                            ),
                                                            span: 144..145,
                                                        },
                                                    ),
                                                    span: 133..145,
                                                },
                                            ],
                                        ),
                                        span: 128..146,
                                    },
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 2,
                                                suffix: None,
                                            },
                                        ),
                                        span: 148..149,
                                    },
                                ],
                            ),
                            span: 87..150,
                        },
                    ],
                ),
                span: 79..151,
            },
            wheres: [],
            span: 65..151,
        },
    ],
}

== types ==
pick : (forall a b. (a, b) -> a) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn pick(g) =
  return 1 to t@0
  return true to t@1
  return g to t@2
  (force t@2)(t@0, t@1) to t@3
  return "x" to t@4
  return g to t@5
  (force t@5)(t@3, t@4)
fn main() =
  return thunk { \x y. return x } to t@6
  pick(t@6) to t@7
  return 2 to t@8
  return thunk { \x y. return x } to t@9
  (force t@9)(t@7, t@8) to t@10
  print t@10 to t@11
  print_nl

== fbip (rc) ==
fn pick(g) =
  dup g
  return 1 to t@0
  return true to t@1
  return g to t@2
  (force t@2)(t@0, t@1) to t@3
  return "x" to t@4
  return g to t@5
  (force t@5)(t@3, t@4)
fn main() =
  thunk { \x y.
    drop y
    return x
  } to t@6
  pick(t@6) to t@7
  return 2 to t@8
  thunk { \x y.
    drop y
    return x
  } to t@9
  (force t@9)(t@7, t@8) to t@10
  print t@10 to t@11
  drop t@11
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@.str0 = private constant { i64, i64, i64, [2 x i8] } { i64 1152921504606846976, i64 1398034944, i64 1, [2 x i8] c"x\00" }, align 8
@prism_native_kont_table = constant [798 x i8] c"scheme  prism-core-hash-v2\0Abundle  110f1a11dc07448cc54911f677ec934ecabf6f074fc77c6c2d6e1b8014bb2c15\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:110f1a11dc07448cc54911f677ec934ecabf6f074fc77c6c2d6e1b8014bb2c15\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  e755f47048bc2c6476bf3ce89a93b446e4cea41c4f420aab1c4a71334e4837d4  main\0Afn      prismfn_pick  0f64e0e3878117ce4be36ecb5caeb2a99791d600936680da469db893ce4523e3  pick\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [902 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  110f1a11dc07448cc54911f677ec934ecabf6f074fc77c6c2d6e1b8014bb2c15\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:110f1a11dc07448cc54911f677ec934ecabf6f074fc77c6c2d6e1b8014bb2c15\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main e755f47048bc2c6476bf3ce89a93b446e4cea41c4f420aab1c4a71334e4837d4 main arity 0 slots abi-word[]\0Astate prismfn_pick 0f64e0e3878117ce4be36ecb5caeb2a99791d600936680da469db893ce4523e3 pick arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"e755f47048bc2c6476bf3ce89a93b446e4cea41c4f420aab1c4a71334e4837d4\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  call void @prism_rc_inc(i64 %t4)
  %t8 = call i64 @prismap_2(i64 %t4, i64 3, i64 3)
  call void @prism_rc_dec(i64 %t4)
  %t10 = call i64 @prismap_2(i64 %t4, i64 %t8, i64 ptrtoint (ptr @.str0 to i64))
  call void @prism_rc_dec(i64 %t4)
  %t12 = call ptr @prism_alloc(i64 0)
  %t13 = getelementptr inbounds i8, ptr %t12, i64 8
  store i64 6217696733472061813, ptr %t13, align 8
  %t15 = ptrtoint ptr %t12 to i64
  %t17 = call i64 @prismap_2(i64 %t15, i64 %t10, i64 5)
  call void @prism_rc_dec(i64 %t15)
  call void @prism_print_int(i64 %t17)
  call void @prism_rc_dec(i64 %t17)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_2(i64 %_clos, i64 %_a0, i64 %_a1) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
    i64 6217696733472061813, label %_lam6217696733472061813
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0, i64 %_a1)
  br label %_merge

_lam6217696733472061813:                          ; preds = %entry
  %_r6217696733472061813 = call i64 @prismlam_6217696733472061813(i64 %_a0, i64 %_a1)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam6217696733472061813, %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ], [ %_r6217696733472061813, %_lam6217696733472061813 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0, i64 %_p1) #0 {
entry:
  call void @prism_rc_dec(i64 %_p1)
  ret i64 %_p0
}

; Function Attrs: nounwind
define i64 @prismlam_6217696733472061813(i64 %_p0, i64 %_p1) #0 {
entry:
  call void @prism_rc_dec(i64 %_p1)
  ret i64 %_p0
}

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [1]
result: ()
